add entry to category; swagger update
