# blog_swagger.json
@@ -155,6 +155,96 @@
         }
       }
     },
+    "/entry/{entryId}/add/{categoryId}": {
+      "post": {
+        "tags": [
+          "entry"
+        ],
+        "summary": "Adds an entry to a category",
+        "description": "",
+        "operationId": "addCategoryToEntry",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "entryId",
+            "in": "path",
+            "description": "ID of entry",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          },
+          {
+            "name": "categoryId",
+            "in": "path",
+            "description": "ID of category",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Insert successful"
+          },
+          "403": {
+            "description": "Already 5 pairs"
+          },
+          "500": {
+            "description": "Error"
+          }
+        }
+      }
+    },
+    "/entry/{entryId}/remove/{categoryId}": {
+      "delete": {
+        "tags": [
+          "entry"
+        ],
+        "summary": "Removes an entry from a category",
+        "description": "",
+        "operationId": "removeCategoryToEntry",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "entryId",
+            "in": "path",
+            "description": "ID of entry",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          },
+          {
+            "name": "categoryId",
+            "in": "path",
+            "description": "ID of category",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Delete successful"
+          },
+          "404": {
+            "description": "Pair not found"
+          },
+          "500": {
+            "description": "Error"
+          }
+        }
+      }
+    },
     "/category": {
       "post": {
         "tags": [
